change dark mode to manual, change border radius of buttons, add new ring on focus to buttons, looks cool! configured editor options and changed tab size to 2, add the missing commas in links in a FAQ fix "More Screenshots" taking to discord not gallery Compressor now returns trimmed result to prevent useless lines from coming

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -16,16 +16,16 @@ body{
 }
 
 .transition-custom{
-  transition-duration: .2s;
+  transition-duration: .08s;
   transition-timing-function: cubic-bezier(.4,0,1,1);
 }
 
 .btn{
-  @apply inline-flex items-center justify-center rounded-full border text-center transition-custom;
+  @apply inline-flex items-center justify-center rounded-2xl text-center transition-custom border;
 }
-/* .btn:focus{
-  @apply ring-offset-2 ring-[#4287f5] shadow ring
-} */
+.btn:focus{
+  @apply ring-offset-2 ring;
+}
 
 *:focus{
   outline: none;
